packages/typ/tests/fixtures/diagnostics/0187_adt_variant_branch_result_mismatch_06.ml.infer.expected
File "0187_adt_variant_branch_result_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0187_adt_variant_branch_result_mismatch_06 is not a valid module name.

File "0187_adt_variant_branch_result_mismatch_06.ml", line 4, characters 14-15:
4 |   | High y -> y
                  ^
Error: The value y has type bool but an expression was expected of type int
