packages/typ/tests/fixtures/diagnostics/0187_adt_variant_branch_result_mismatch_06.ml
type rec_zeta = Low of int | High of bool
let read_zeta = function
  | Low x -> x
  | High y -> y
